--- a/views/host/createQuestionPacks.ejs
+++ b/views/host/createQuestionPacks.ejs
@@ -66,7 +66,10 @@
                                         <div class="col-sm-2">
                                             <h5 class="card-title">Question</h5>
                                         </div>
-                                        <div class="col-sm-3">
+                                        <div class="col-sm-2 mt-5">
+                                            
+                                        </div>
+                                        <div class="col-sm-2">
                                             <div class="form-group">
                                                 <label>Answer</label>
                                                 <select class="form-control answer">
@@ -77,7 +80,7 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <div class="col-sm-4">
+                                        <div class="col-sm-3">
                                             <div class="form-group">
                                                 <label>Time limit</label>
                                                 <input class="form-control limit" type="number" />
@@ -218,7 +221,7 @@
         function AddQuestion() {
             nextQ++;
             let questionList = $jq("#question-list");
-            childStr = "<div id=\"q" + nextQ + "\" class=\"row\"> <div class=\"card col-sm-12\"> <div class=\"card-body\"> <div class=\"row d-flex justify-content-between ml-1 mr-1\"> <div class=\"col-sm-2\"> <h5 class=\"card-title\">Question</h5> </div> <div class=\"col-sm-3\"> <div class=\"form-group\"> <label>Answer</label> <select class=\"form-control answer\"> <option value=\"A\" selected=\"selected\">A</option> <option value=\"B\">B</option> <option value=\"C\">C</option> <option value=\"D\">D</option> </select> </div> </div> <div class=\"col-sm-4\"> <div class=\"form-group\"> <label>Time limit</label> <input class=\"form-control limit\" type=\"number\" /> </div> </div> </div> <div class=\"form-group mt-2\"> <textarea class=\"form-control question-text-edit\" id=\"exampleFormControlTextarea1\" rows=\"3\"></textarea> </div> <div class=\"row\"> <div class=\"col-sm-6\"> <div class=\"input-group mb-3\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">A</span> </div> <input type=\"text\" class=\"form-control A\" /> </div> </div> <div class=\"col-sm-6\"> <div class=\"input-group mb-3\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">B</span> </div> <input type=\"text\" class=\"form-control B\" /> </div> </div> </div> <div class=\"row\"> <div class=\"col-sm-6\"> <div class=\"input-group\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">C</span> </div> <input type=\"text\" class=\"form-control C\" /> </div> </div> <div class=\"col-sm-6\"> <div class=\"input-group\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">D</span> </div> <input type=\"text\" class=\"form-control D\" /> </div> </div> </div> </div> </div> </div>";
+            childStr = "<div id=\""+ nextQ + "\" class=\"row\"> <div class=\"card col-sm-12\"> <div class=\"card-body\"> <div class=\"row d-flex justify-content-between ml-1 mr-1\"> <div class=\"col-sm-2\"> <h5 class=\"card-title\">Question</h5> <button type=\"button\" class=\"btn btn-danger\" onclick=\"Delete(" + nextQ + ")\">Delete</button></div> <div class=\"col-sm-2 mt-5\"> </div> <div class=\"col-sm-2\"> <div class=\"form-group\"> <label>Answer</label> <select class=\"form-control answer\"> <option value=\"A\" selected=\"selected\">A</option> <option value=\"B\">B</option> <option value=\"C\">C</option> <option value=\"D\">D</option> </select> </div> </div> <div class=\"col-sm-3\"> <div class=\"form-group\"> <label>Time limit</label> <input class=\"form-control limit\" type=\"number\" /> </div> </div> </div> <div class=\"form-group mt-2\"> <textarea class=\"form-control question-text-edit\" id=\"exampleFormControlTextarea1\" rows=\"3\"></textarea> </div> <div class=\"row\"> <div class=\"col-sm-6\"> <div class=\"input-group mb-3\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">A</span> </div> <input type=\"text\" class=\"form-control A\" /> </div> </div> <div class=\"col-sm-6\"> <div class=\"input-group mb-3\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">B</span> </div> <input type=\"text\" class=\"form-control B\" /> </div> </div> </div> <div class=\"row\"> <div class=\"col-sm-6\"> <div class=\"input-group\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">C</span> </div> <input type=\"text\" class=\"form-control C\" /> </div> </div> <div class=\"col-sm-6\"> <div class=\"input-group\"> <div class=\"input-group-prepend\"> <span class=\"input-group-text\">D</span> </div> <input type=\"text\" class=\"form-control D\" /> </div> </div> </div> </div> </div> </div>";
             questionList.append(childStr);
         }
 
