--- a/public/style/host/lobby.css
+++ b/public/style/host/lobby.css
@@ -47,7 +47,7 @@ body {
     font-weight: bold;
     color: white;
     background-color: #4CAF50 !important;
-    box-shadow: -2px 5px 10px black;
+    box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.5);
 }
 
 .main {
@@ -73,16 +73,27 @@ body {
 }
 
 .packList {
+    padding: 30px;
     display: inline-block;
-    height: 18rem;
     overflow-x: scroll;
+    width: 100%;
+    height: 316px;
 }
 
 .packCard {
+    margin-right: 0.5rem;
     float: left;
     width: 10rem;
 }
 
 .packCard:hover {
     color: black;
+}
+
+#desc-body {
+    overflow-y: scroll;
+}
+
+.pack-info{
+    height: 563.75px;
 }
