--- a/views/host/lobby.ejs
+++ b/views/host/lobby.ejs
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="vi">
-    <head>
-        <title>Bamboo - <%= lobbyID %></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="/style/host/lobby.css">
-    </head>
-    <body>
+
+<head>
+    <title>Bamboo - <%= lobbyID %></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/style/host/lobby.css">
+</head>
+
+<body>
     <nav class="navbar navbar-light bg-light">
         <p>Lobby ID: <span id="roomID"> <%= lobbyID %> </span></p>
         <button type="button" class="btn btn-success startButton" onclick="startGame()">START GAME</button>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <p >Host: <span id="hostname"></span></p>
+                <p>Host: <span id="hostname"></span></p>
             </li>
             <li class="nav-item">
                 <button type="button" class="btn btn-outline-dark" onclick="signOut()">Sign out</button>
@@ -32,29 +35,31 @@
                 </div>
                 <div class="alert alert-secondary" role="alert">
                     <div class="row">
-                        <div class="col-sm-3"> 
+                        <div class="col-sm-3">
                             Question packs
                         </div>
                         <div class="col-sm-9">
-                            <div class="input-group input-group-sm mb-3">
+                            <div class="input-group input-group-sm">
                                 <div class="input-group-prepend">
-                                    <button class="btn btn-outline-secondary" type="button" onclick="search()">Search</button>
+                                    <button class="btn btn-outline-secondary" type="button"
+                                        onclick="search()">Search</button>
                                 </div>
                                 <input type="text" class="form-control">
                                 <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" type="button" onclick="create()">Create</button>
+                                    <button class="btn btn-outline-secondary" type="button"
+                                        onclick="create()">Create</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div id="questionPacks" class="alert alert-success packList" role="alert">
-                        <div class="card packCard" style="display:None;">
-                            <img class="card-img-top" src="/images/no-image-available.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Pack title</h5>
-                            </div>
+                    <div class="card packCard" style="display:None;">
+                        <img class="card-img-top" src="/images/no-image-available.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Pack title</h5>
                         </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
@@ -66,11 +71,13 @@
                 <div class="alert alert-secondary" role="alert">
                     Pack Info
                 </div>
-                <div class="card">
-                    <img class="card-img-top" src="/images/no-image-available.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Pack Title</h5>
-                        <p class="card-text">This is an example description. This is an example description. This is an example description. This is an example description. This is an example description. This is an example description. This is an example description. This is an example description. </p>
+                <div class="card pack-info">
+                    <img class="card-img-top" id="pack-img" src="/images/no-image-available.jpg" alt="Card image cap">
+                    <div class="card-body" id="desc-body" >
+                        <h5 class="card-title" id="title">Pack Title</h5>
+                        <p class="card-text" id="description">This is an example description. This is an example description. This is an
+                            example description. This is an example description. This is an example description. This is
+                            an example description. This is an example description. This is an example description. </p>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Categories</h5>
@@ -86,18 +93,22 @@
                     </div>
                 </div>
             </div>
-         </div>
         </div>
+    </div>
     </div>
 
     <!-- Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
 
     <script src="/javascript/config.js"></script>
     <script>
@@ -107,16 +118,16 @@
 
         const roomID = "<%= lobbyID%>";
 
-        function checkingValidLobbyOwner(uid){
-            socket.emit('lobby',{
+        function checkingValidLobbyOwner(uid) {
+            socket.emit('lobby', {
                 state: 0,
                 uid: uid,
-                roomID:roomID
+                roomID: roomID
             });
         }
 
         function getQuestionsPackData(uid) {
-            socket.emit('lobby',{
+            socket.emit('lobby', {
                 state: 1,
                 uid: uid,
                 roomID: roomID
@@ -124,54 +135,61 @@
         }
 
         function getPlayers(uid) {
-            socket.emit('lobby',{
+            socket.emit('lobby', {
                 state: 2,
                 roomID: roomID
             });
         }
 
-        function setUpSocket(uid){
+        function setUpSocket(uid) {
 
-            socket.on('connection', function(data){
+            socket.on('connection', function (data) {
                 console.log('[] Made a connection: ', data.id);
             });
 
-            socket.on('disconnect', function(data){
+            socket.on('disconnect', function (data) {
                 console.log('[] Disconnect to server socket: ', data.id);
             });
 
-            socket.on('lobby',function(data){
-                console.log('[INFO] Receive a socket. State',data.state);
+            socket.on('lobby', function (data) {
+                console.log('[INFO] Receive a socket. State', data.state);
                 console.log('[INFO] Data: ', data)
-                var state =data.state;
+                var state = data.state;
 
-                if(roomID == data.roomID){
-                    if(state==1){
+                if (roomID == data.roomID) {
+                    if (state == 1) {
                         // Available Question Packs of that host 
-                        var questionPacks= data.questionPacks;
+                        var questionPacks = data.questionPacks;
                         var parent = $jq("#questionPacks");
                         var childStr = "";
                         for (let key in questionPacks) {
-                            childStr += "<div class=\"card packCard\"><img id=\""+key+ "\"class=\"card-img-top\" src=\"/images/"+key+"/"+questionPacks[key].imageURL+"\" alt=\"Card image cap\"><div class=\"card-body\"><h5 class=\"card-title\">"+questionPacks[key].title+"</h5></div></div>";
+                            childStr = "<div class=\"card packCard\" id=\"" + key + "\" ><img class=\"card-img-top\" src=\"/images/" + key + "/" + questionPacks[key].imageURL + "\" alt=\"Card image cap\"><div class=\"card-body\"><h5 class=\"card-title\">" + questionPacks[key].title + "</h5></div></div>";
+                            parent.append(childStr);
+                            $jq("#" + key).click(function(){
+                                $jq("#pack-img").attr('src',"/images/" + key + "/" + questionPacks[key].imageURL);
+                                $jq("#title").text(questionPacks[key].title);
+                                $jq("#description").text(questionPacks[key].description);
+                            });
                         }
-                        parent.html(childStr);
-                    }else if(state==2){
+                        
+                        // parent.html(childStr);
+                    } else if (state == 2) {
                         // get list of user for the first time
-                        var players = data.players; 
+                        var players = data.players;
                         var playerList = $jq("#playerList");
                         let childStr = "";
                         for (var key in players) {
                             childStr += "<li class=\"badge badge-success\">" + players[key]['name'] + "</li>";
                         }
                         playerList.html(childStr);
-                    }else if(state==3){
+                    } else if (state == 3) {
                         // add user
                         var playerList = $jq("#playerList");
                         let childStr = playerList.html();
                         childStr += "<li class=\"badge badge-success\">" + data.name + "</li>";
                         playerList.html(childStr);
-                    }else if(state==4){
-                        if(data.uid==uid){
+                    } else if (state == 4) {
+                        if (data.uid == uid) {
                             window.location.href = '/';
                         }
                     }
@@ -179,8 +197,10 @@
             });
         }
 
+
+
         // Check user signed-in
-        firebase.auth().onAuthStateChanged(function(user) {
+        firebase.auth().onAuthStateChanged(function (user) {
             if (user && !user.isAnonymous) {
                 // User is signed in.
 
@@ -192,21 +212,23 @@
                 // change hostname to displayName
                 $jq("#hostname").text(user.displayName);
                 // get new lobby id from Firebase
-                
-            // ...
+
+                // ...
             } else {
                 // User is signed out.
                 alert("You have not signed-in yet :(");
                 // Redirect to authen
                 window.location.href = '/authen/<%= lobbyID %>';
-            // ...
+                // ...
             }
         });
 
+
+
         function signOut() {
-            firebase.auth().signOut().then(function() {
+            firebase.auth().signOut().then(function () {
                 console.log('Signed Out');
-            }, function(error) {
+            }, function (error) {
                 console.error('Sign Out Error', error);
             });
         }
@@ -218,11 +240,12 @@
             }, 500);
         }
 
-        function startGame(){
+        function startGame() {
             window.location.href = '/host/gameView?roomID=<%= lobbyID%>';
         }
 
     </script>
 
-    </body>
+</body>
+
 </html>
